# simple_validation

./: .gitignore  setup.cfg
simple_validation/: __init__.py  _base.py  simple_validation.py  validated_attr.py  validated_mappings.py
