[metadata]
name = simple_validation
version = 0.0.1
author = Josh Forletta
author_email = author@example.com
description = a simple validation framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshForletta/simple_validation
project_urls = 
	Bug_Tracker = https://github.com/JoshForletta/simple_validation/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
